Style tunes and bug fixes grids are aligned nothink is random

--- a/src/Styles/modular/charDetails.module.css
+++ b/src/Styles/modular/charDetails.module.css
@@ -100,11 +100,10 @@
 }
 
 .pvp-spec img {
-    width: 48px;
-    height: 48px;
     mix-blend-mode: lighten;
     background-color: transparent;
-    filter: contrast(2) brightness(1.1);
+    /* filter: contrast(2) brightness(1.1); */
+    filter: brightness(120%) contrast(110%) saturate(350%) sepia(15%) hue-rotate(-10deg);
 }
 
 .pvp-details strong {
@@ -116,37 +115,22 @@
     color: #facc15;
     font-size: 14px;
 }
+
+.pvp-stats {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
 .pvp-details {
     width: 100%;
-
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    grid-template-columns: auto;
-    gap: 8px;
-  
-    justify-content: center;
-    align-content: start;
-    justify-items: center;
-    background: #334155;
-    padding: 12px;
-    border-radius: 6px;
-    text-align: center;
-    flex: 1;
-    margin: 5px;
-}
-.pvp-card-info {
-    width: 100%;
-
+    min-height: 154px;
     display: grid;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: auto;
     gap: 8px;
     grid-auto-flow: row dense;
   
-    justify-content: center;
-    align-content: center;
     justify-items: center;
-    align-items: center;
     background: #334155;
     padding: 12px;
     border-radius: 6px;
@@ -155,8 +139,38 @@
     margin: 5px;
 }
 
+.pvp-card-info {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10%;
+    /* background: #334155; */
+
+}
+
 .pvp-details p {
     color: #0ea5e9;
+}
+.pvp-stat-box {
+    background: #334155;
+    padding: 12px;
+    border-radius: 6px;
+    text-align: center;
+    flex: 1;
+    margin: 5px;
+}
+
+.pvp-stat-box small {
+    font-size: 12px;
+    color: #aaa;
+    display: block;
+}
+
+.pvp-stat-box span {
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 .card {
@@ -195,8 +209,10 @@
 }
 
 .inner-section {
+    height: 100%;
     border: 2px solid rgba(255, 204, 0, 0.6); /* Gold outline */
     padding: 5px 12px;
+    padding-bottom: 10px;
     border-radius: 6px;
     font-weight: bold;
     text-align: center;
